Fix footer and resolve spacing issue on frontpage

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -715,6 +715,14 @@
         white-space: nowrap;
         width: 20%;
     }
+    _::-webkit-:not(:root:root), .socialItems {
+        margin-left:-180px;
+        margin-right: 30px;
+    }
+    _::-webkit-:not(:root:root), .socialItem {
+        margin-left: 70px;
+        margin-right: -20px;
+    }
 
 }
 
